--- a/notification_push/package.json
+++ b/notification_push/package.json
@@ -10,6 +10,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@types/node": "^22.5.0",
         "notification-system": "file:../pkg"
     },
     "devDependencies": {
