--- a/notification_push/package.json
+++ b/notification_push/package.json
@@ -4,7 +4,8 @@
     "type": "module",
     "main": "index.js",
     "scripts": {
-        "start": "npx tsc index.ts -m nodenext && node index.js"
+        "build": "npx tsc index.ts -m nodenext",
+        "start": "node index.js"
     },
     "author": "",
     "license": "ISC",
